--- a/src/tools/tools.module.css
+++ b/src/tools/tools.module.css
@@ -2,35 +2,28 @@
 
 .window {
   min-width: unset;
-  flex: 1;
   display: flex;
   margin: 0 max(env(safe-area-inset-right, 0.5rem), 0.5rem) 0.5rem 0;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-start;
   margin-left: max(env(safe-area-inset-left, 0.5rem), 0.5rem);
   border: 0;
   flex-direction: column;
-  background: none;
   flex-wrap: nowrap;
-  background: black;
-  gap: 2px;
-  padding: 2px;
-  color: black;
-  box-shadow: 2px 2px 0 black;
 }
 
 .tools {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
-  flex: 1;
   border: 0;
   padding: 0;
   flex-direction: column;
-  gap: 2px
+  gap: 2px;
+  padding: 2px;
+  color: black;
+  box-shadow: 2px 2px 0 black;
+  background: black;
 }
 
 .a11y {
@@ -42,15 +35,33 @@
   left: 0;
 }
 
-.radioButton {
+.actions {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+  padding: 2px;
+  box-shadow: 2px 2px 0 black;
+  background: black;
+}
+
+.radioButton, .iconButton {
   width: var(--touch-target-size);
   height: var(--touch-target-size);
+  border: 0;
   background: white;
   color: black;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.active {
+  filter: invert(1);
+}
+
+.iconButton:disabled {
+  opacity: 0.7;
 }
 
 .pixelIcon {
@@ -61,17 +72,16 @@
 
 @media (max-width: 900px) {
   .window {
-    grid-column: 1 / 3;
-    grid-row: 2 / 3;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: unset;
     flex-direction: row;
   }
 
   .tools {
-    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     flex: unset;
+  }
+
+  .actions {
+    flex-direction: row;
   }
 }
