--- a/src/document/document.module.css
+++ b/src/document/document.module.css
@@ -4,14 +4,14 @@
   background: white;
   border: 2px solid black;
   box-shadow: 2px 2px 0px black;
-  display: flex;
-  flex-direction: column;
   grid-row: 2 / 3;
   grid-column: 2 / 3;
   min-width: unset;
   flex: 1;
-  display: flex;
   margin: 0 max(env(safe-area-inset-right, 0.5rem), 0.5rem) 0.5rem 0;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 
 @media (max-width: 900px) {
@@ -46,24 +46,22 @@
   background: white;
 }
 
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  overflow: auto;
-  flex: 1;
-}
-
-.inner {
-  margin: auto;
-  position: relative;
-}
-
 .canvas {
   cursor: crosshair;
   touch-action: manipulation;
   image-rendering: pixelated;
   background: repeating-linear-gradient(45deg, silver 0, silver 5px, white 5px, white 10px);
-  background-image: url("/images/dotty/bg.png");
+  background-image: url("../assets/bg-20.png");
   margin: auto;
+}
+
+.moveCanvas {
+  cursor: move;
+  touch-action: manipulation;
+  image-rendering: pixelated;
+  position: absolute;
+  left: 0;
+  right: 0;
+  z-index: 99;
+  opacity: 50%;
 }
