--- a/src/modal/modal-contents.module.css
+++ b/src/modal/modal-contents.module.css
@@ -1,5 +1,5 @@
 .grid {
-  display: grid; 
+  display: grid;
   grid-template-columns: 1fr 2fr;
   gap: 0.5rem;
   margin-bottom: 0.5rem;
@@ -18,7 +18,9 @@ h2 {
 .buttons {
   flex-direction: row-reverse;
   display: flex;
-  gap: 1rem;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+  margin-top: 0.5rem;
 }
 
 .text {
@@ -40,10 +42,24 @@ h2 {
   border: 2px solid black;
 }
 
+.groupedFieldset {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid black;
+}
+
+.groupedFieldset .fieldset {
+  border: 0;
+}
+
 .input {
   font-family: var(--ui-font);
   font-size: var(--font-size);
   border: 2px solid black;
+}
+
+.input[type="number"] {
+  max-width: calc(var(--touch-target-size) * 2);
 }
 
 .select {
@@ -52,4 +68,20 @@ h2 {
   color: black;
   font-family: var(--ui-font);
   font-size: var(--font-size);
+}
+
+.hidden {
+  display: none;
+}
+
+.chipGrid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 0.5rem;
+}
+
+.colorChip {
+  width: var(--touch-target-size);
+  overflow: hidden;
 }
