--- a/src/modal/modal-contents.module.css
+++ b/src/modal/modal-contents.module.css
@@ -108,3 +108,11 @@ h2 {
   color: white;
   background: black;
 }
+
+.preview {
+  min-width: var(--touch-target-size);
+  min-height: var(--touch-target-size);
+  image-rendering: pixelated;
+  border: 2px solid black;
+  margin: 0.5rem;
+}
