--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,11 @@ body {
 #root {
   height: 100%;
   width: 100%;
+  overflow: hidden;
+}
+
+body, html {
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
 }
