--- a/src/document/document.module.css
+++ b/src/document/document.module.css
@@ -27,7 +27,6 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  border-bottom: 2px solid black;
   border-left: 2px solid white;
   border-right: 2px solid white;
   background: white;
@@ -47,22 +46,8 @@
   background: white;
 }
 
-.canvas {
-  cursor: crosshair;
-  touch-action: manipulation;
-  image-rendering: pixelated;
-  background: repeating-linear-gradient(45deg, silver 0, silver 5px, white 5px, white 10px);
-  background-image: url("../assets/bg-20.png");
-  margin: auto;
-}
-
-.moveCanvas {
-  cursor: move;
-  touch-action: manipulation;
-  image-rendering: pixelated;
-  position: absolute;
-  left: 0;
-  right: 0;
-  opacity: 50%;
-  border: 1px dashed black;
+.divider {
+  height: 0;
+  margin: 0;
+  border: 1px solid black; /* 1px top + 1px bottom = 2px */
 }
