--- a/src/modal/about.module.css
+++ b/src/modal/about.module.css
@@ -2,11 +2,17 @@
 
 .modalContent {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   gap: 1rem;
   font-family: var(--text-font);
   
+}
+
+.details {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .description {
@@ -20,13 +26,11 @@
   width: 64px;
   height: 64px;
   image-rendering: pixelated;
-  flex: 1;
   touch-action: manipulation;
 }
 
 .buttons {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   align-items: center;
 }
