--- a/src/document/canvas.module.css
+++ b/src/document/canvas.module.css
@@ -4,8 +4,10 @@
   touch-action: manipulation;
   image-rendering: pixelated;
   background: repeating-linear-gradient(45deg, silver 0, silver 5px, white 5px, white 10px);
-  background-image: url("../assets/bg-20.png");
+  background-image: url("../assets/bg-20-line.png");
   margin: auto;
+  border: 1px solid #888888;
+  border-width: 0 0.5px 0.5px 0;
 }
 
 .moveCanvas {
