--- a/src/base.module.css
+++ b/src/base.module.css
@@ -10,7 +10,7 @@
 
 :root {
   --touch-target-size: 42px;
-  --font-size: 32px;
+  --font-size: 18pt;
   --ui-font: 'ChiKareGo2';
   --text-font: 'FindersKeepers';
 }
