--- a/src/document/canvas.module.css
+++ b/src/document/canvas.module.css
@@ -3,11 +3,29 @@
   cursor: crosshair;
   touch-action: manipulation;
   image-rendering: pixelated;
-  background: repeating-linear-gradient(45deg, silver 0, silver 5px, white 5px, white 10px);
-  background-image: url("../assets/bg-20-line.png");
   margin: auto;
   border: 1px solid #888888;
   border-width: 0 0.5px 0.5px 0;
+}
+
+.canvasOverlay {
+  pointer-events: none;
+  z-index: 10;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.squareOverlay {
+  background-image: url("../assets/bg-20-line.png");
+}
+
+.knitOverlay {
+  background-image: url("../assets/bg-34-line.png");
+}
+
+.threeFourOverlay {
+  background-image: url("../assets/bg-34-line.png");
 }
 
 .moveCanvas {
