--- a/src/document/canvas.module.css
+++ b/src/document/canvas.module.css
@@ -21,7 +21,7 @@
 }
 
 .knitOverlay {
-  background-image: url("../assets/bg-34-line.png");
+  background-image: url("../assets/bg-knit.png");
 }
 
 .threeFourOverlay {
